# Marvin

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  Untitled-2026-03-20-2209.excalidraw  docker-compose.yml  marvin_ops.py  mcp.json.example
mcp-server/: .gitignore  CLAUDE.md  Dockerfile  MARVIN_PROMPT.md  README.md  code_improvement_backend.py  docs_backend.py  marvin_server.py  memory.py  ontology.py  ops_backend.py  orchestrator_backend.py  pyproject.toml  rebuild_docs.py  relation_types.json  scratch_refine_plan.py  self_audit.py  start-marvin.sh  system_design_backend.py  test_code_improvement_backend.py  test_docs_backend.py  test_marvin_server.py  test_memory.py  test_ontology.py  test_ops_backend.py  test_orchestrator_backend.py  test_prompt_engineer_backend.py  test_system_design_backend.py  test_web_to_docs_backend.py  update_tool_list.py  web_to_docs_backend.py
mcp-server-poc/: CLAUDE.md  Makefile  README.md  docker-compose.yml  marvin_server.py  memory.py  ontology.py  prompt_engineer_backend.py  pyproject.toml  web_to_docs_backend.py
mcp-server-poc/diagrams/: marvin-self-improvement-loop.mmd  secure-mcp-platform.mmd
mcp-server-poc/docs/: adr-architecture-decision-records.md  api-reference.md  argocd-core-concepts.md  argocd-getting-started.md  aws-api-gateway.md  aws-artifact.md  aws-audit-manager.md  aws-backup.md  aws-cloud-map.md  aws-cognito-overview.md  aws-ecr-image-scanning.md  aws-ecr-overview.md  aws-ecs-fargate.md  aws-ecs-secrets-injection.md  aws-ecs-service-connect.md  aws-guardduty.md  aws-iam-overview.md  aws-kms-overview.md  aws-macie.md  aws-neptune.md  aws-opensearch.md  aws-privatelink.md  aws-sts.md  aws-vpc-flow-logs.md  aws-vpc-overview.md  aws-waf-overview.md  aws-well-architected-framework.md  aws-xray.md  (+73 more)
(+500 files in other folders)
