[project]
name = "mcp-docs-server"
version = "0.1.0"
description = "MCP Server POC — Documentation Search"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.4.1",
    "neo4j>=6.1.0",
    "openai>=2.31.0",
    "pymilvus>=2.6.12",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
