[project]
name = "mcp-marvin"
version = "1.0.0"
description = "Marvin — Unified MCP server for ontology, memory, docs, prompts, and diagrams"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "lancedb>=0.20.0",
    "lxml>=6.0.4",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.4.1",
    "neo4j>=6.1.0",
    "openai>=2.31.0",
    "pymilvus>=2.6.12",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "interrogate>=1.7.0",
    "pytest>=9.0.3",
]
